--- a/DishDrop/live/eat/edit-profile.html
+++ b/DishDrop/live/eat/edit-profile.html
@@ -17,6 +17,7 @@
       <link rel="stylesheet" href="vender/slick/slick/slick-theme.css">
       <!-- Font Awesome Icon -->
       <link href="vender/fontawesome/css/all.min.css" rel="stylesheet">
+      <link href="../../cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
       <!-- Sidebar CSS -->
       <link href="vender/sidebar/demo.css" rel="stylesheet">
       <!-- Custom Css -->
