--- a/DishDrop/live/eat/index.html
+++ b/DishDrop/live/eat/index.html
@@ -17,6 +17,7 @@
       <link rel="stylesheet" href="vender/slick/slick/slick-theme.css">
       <!-- Font Awesome Icon -->
       <link href="vender/fontawesome/css/all.min.css" rel="stylesheet">
+      <link href="../../cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css" rel="stylesheet">
       <!-- Sidebar CSS -->
       <link href="vender/sidebar/demo.css" rel="stylesheet">
       <!-- Custom Css -->
@@ -765,7 +766,7 @@
       <script src="vender/sidebar/hc-offcanvas-nav.js" type="cfd2f0e2380499cb7a9225ba-text/javascript"></script>
       <!-- Javascript -->
       <script src="js/custom.js" type="cfd2f0e2380499cb7a9225ba-text/javascript"></script>
-   <script src="../../cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="cfd2f0e2380499cb7a9225ba-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9011eb8c4d82ed12","version":"2024.10.5","r":1,"serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"token":"dd471ab1978346bbb991feaa79e6ce5c","b":1}' crossorigin="anonymous"></script>
+      <script src="../../cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="cfd2f0e2380499cb7a9225ba-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9011eb8c4d82ed12","version":"2024.10.5","r":1,"serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"token":"dd471ab1978346bbb991feaa79e6ce5c","b":1}' crossorigin="anonymous"></script>
 </body>
 
 <!-- Mirrored from askbootstrap.com/preview/eatsome/index.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Jan 2025 03:03:25 GMT -->
