--- a/DishDrop/live/eat/offers.html
+++ b/DishDrop/live/eat/offers.html
@@ -7,7 +7,7 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link rel="icon" href="img/logo.png" type="image/png">
-      <title>Eatsome - Restaurant & Food Delivery Mobile Template</title>
+      <title>DishDrop - Restaurant & Food Delivery Mobile</title>
       <!-- Bootstrap Css -->
       <link rel="stylesheet" href="vender/bootstrap/css/bootstrap.min.css">
       <!-- Icofont -->
