--- a/index.html
+++ b/index.html
@@ -181,14 +181,14 @@
       </div>
       <!-- Eat what make you happy -->
       <div class="p-3 bg-white">
-         <h3 class="fw-bold mb-3">Eat what makes you happy</h3>
+         <h3 class="fw-bold mb-3">Daily</h3>
          <div class="row align-items-end g-4">
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none">
                   <div class="card border-0">
-                     <img src="img/d9.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
+                     <img src="./Foods/daily/amgwamoo.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Sweets</h6>
+                        <h6 class="card-title text-muted m-0">Angwamoo</h6>
                      </div>
                   </div>
                </a>
@@ -196,9 +196,9 @@
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none">
                   <div class="card border-0">
-                     <img src="img/d3.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
+                     <img src="./Foods/daily/assorted-rice.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Burger</h6>
+                        <h6 class="card-title text-muted m-0">Assorted Rice</h6>
                      </div>
                   </div>
                </a>
@@ -206,9 +206,9 @@
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none link-dark">
                   <div class="card border-0">
-                     <img src="img/d4.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
+                     <img src="./Foods/daily/fried-rice+grilledchicken.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Pizza</h6>
+                        <h6 class="card-title text-muted m-0">Fried Rice</h6>
                      </div>
                   </div>
                </a>
@@ -216,9 +216,9 @@
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none">
                   <div class="card border-0">
-                     <img src="img/d5.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
+                     <img src="./Foods/daily/jollof.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Noddles</h6>
+                        <h6 class="card-title text-muted m-0">Jollof</h6>
                      </div>
                   </div>
                </a>
@@ -227,9 +227,9 @@
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none">
                   <div class="card border-0">
-                     <img src="img/d2.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
+                     <img src="./Foods/daily/singapore-noddles.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Rolls</h6>
+                        <h6 class="card-title text-muted m-0">Singapore Noddles</h6>
                      </div>
                   </div>
                </a>
@@ -237,9 +237,9 @@
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none">
                   <div class="card border-0">
-                     <img src="img/d1.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
+                     <img src="./Foods/sunday/fufu.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Samosa</h6>
+                        <h6 class="card-title text-muted m-0">Food</h6>
                      </div>
                   </div>
                </a>
@@ -247,9 +247,9 @@
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none link-dark">
                   <div class="card border-0">
-                     <img src="img/d8.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
+                     <img src="./Foods/saturday/banku-tilapia.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Healthy</h6>
+                        <h6 class="card-title text-muted m-0">Banku Tilapia</h6>
                      </div>
                   </div>
                </a>
@@ -257,9 +257,9 @@
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none link-dark">
                   <div class="card border-0">
-                     <img src="img/d7.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
+                     <img src="./Foods/saturday/etor.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Fries</h6>
+                        <h6 class="card-title text-muted m-0">Etor</h6>
                      </div>
                   </div>
                </a>
@@ -275,33 +275,33 @@
                      <div class="row align-items-end">
                         <div class="col-3">
                            <div class="card border-0">
-                              <img src="img/d2.png" class="img-fluid m-auto ch-70" alt="#">
+                              <img src="./Foods/thursday/plantain+palava.png" class="img-fluid m-auto ch-70" alt="#">
                               <div class="card-body text-center px-0 pb-0">
-                                 <h6 class="card-title text-muted m-0">Rolls</h6>
+                                 <h6 class="card-title text-muted m-0">Plantain Palava</h6>
                               </div>
                            </div>
                         </div>
                         <div class="col-3">
                            <div class="card border-0">
-                              <img src="img/d6.png" class="img-fluid m-auto ch-70" alt="#">
+                              <img src="./Foods/thursday/rice+palava.png" class="img-fluid m-auto ch-70" alt="#">
                               <div class="card-body text-center px-0 pb-0">
-                                 <h6 class="card-title text-muted m-0">Chaat</h6>
+                                 <h6 class="card-title text-muted m-0">Rice and Palava</h6>
                               </div>
                            </div>
                         </div>
                         <div class="col-3">
                            <div class="card border-0">
-                              <img src="img/d8.png" class="img-fluid m-auto ch-70" alt="#">
+                              <img src="./Foods/thursday/yam+palava.png" class="img-fluid m-auto ch-70" alt="#">
                               <div class="card-body text-center px-0 pb-0">
-                                 <h6 class="card-title text-muted m-0">Healthy</h6>
+                                 <h6 class="card-title text-muted m-0">Yam and Palava</h6>
                               </div>
                            </div>
                         </div>
                         <div class="col-3">
                            <div class="card border-0">
-                              <img src="img/d7.png" class="img-fluid m-auto ch-70" alt="#">
+                              <img src="./Foods/Wednessday/attieke.png" class="img-fluid m-auto ch-70" alt="#">
                               <div class="card-body text-center px-0 pb-0">
-                                 <h6 class="card-title text-muted m-0">Fries</h6>
+                                 <h6 class="card-title text-muted m-0">Attieke</h6>
                               </div>
                            </div>
                         </div>
@@ -448,7 +448,7 @@
                            </div>
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
-                           <div>North India</div>
+                           <div>North Ghana</div>
                            <div>$100 for one</div>
                         </div>
                      </div>
@@ -620,14 +620,14 @@
                      <span><i class="bi bi-search h6"></i></span>
                      <div class="lh-sm">
                         <h6 class="mb-1">Bangalore</h6>
-                        <p class="text-muted m-0">Karnataka, India</p>
+                        <p class="text-muted m-0">Karnataka, ghana</p>
                      </div>
                   </div>
                   <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
                      <span><i class="bi bi-search h6"></i></span>
                      <div class="lh-sm">
                         <h6 class="mb-1">Bangalore internaltional airport</h6>
-                        <p class="text-muted m-0">Karmpegowda.in't Airport, Hunachur, karnataka, India</p>
+                        <p class="text-muted m-0">Karmpegowda.in't Airport, Hunachur, karnataka, ghana</p>
                      </div>
                   </div>
                   <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
