--- a/order-details.html
+++ b/order-details.html
@@ -108,7 +108,7 @@
                <div>$9,00</div>
             </div>
             <div class="d-flex justify-content-between mb-1">
-               <div>Donate $2 to Feeding India</div>
+               <div>Donate $2 to Feeding ghana</div>
                <div>$2,00</div>
             </div>
             <div class="d-flex justify-content-between mb-1">
