--- a/search-list.html
+++ b/search-list.html
@@ -229,7 +229,7 @@
                            <div><span class="badge bg-success">3.4&nbsp;<i class="fa-solid fa-star"></i></span></div>
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
-                           <div>North Indian,chines, Fast...</div>
+                           <div>North ghanan,chines, Fast...</div>
                            <div>$200 for one</div>
                         </div>
                      </div>
