--- a/wallet.html
+++ b/wallet.html
@@ -222,14 +222,14 @@
                      <span><i class="bi bi-search h6"></i></span>
                      <div class="lh-sm">
                         <h6 class="mb-1">Bangalore</h6>
-                        <p class="text-muted m-0">Karnataka, India</p>
+                        <p class="text-muted m-0">Karnataka, ghana</p>
                      </div>
                   </div>
                   <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
                      <span><i class="bi bi-search h6"></i></span>
                      <div class="lh-sm">
                         <h6 class="mb-1">Bangalore internaltional airport</h6>
-                        <p class="text-muted m-0">Karmpegowda.in't Airport, Hunachur, karnataka, India</p>
+                        <p class="text-muted m-0">Karmpegowda.in't Airport, Hunachur, karnataka, ghana</p>
                      </div>
                   </div>
                   <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
