--- a/offers.html
+++ b/offers.html
@@ -387,7 +387,7 @@
                            </div>
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
-                           <div>North India</div>
+                           <div>North ghana</div>
                            <div>$100 for one</div>
                         </div>
                      </div>
@@ -600,14 +600,14 @@
                      <span><i class="bi bi-search h6"></i></span>
                      <div class="lh-sm">
                         <h6 class="mb-1">Bangalore</h6>
-                        <p class="text-muted m-0">Karnataka, India</p>
+                        <p class="text-muted m-0">Karnataka, ghana</p>
                      </div>
                   </div>
                   <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
                      <span><i class="bi bi-search h6"></i></span>
                      <div class="lh-sm">
                         <h6 class="mb-1">Bangalore internaltional airport</h6>
-                        <p class="text-muted m-0">Karmpegowda.in't Airport, Hunachur, karnataka, India</p>
+                        <p class="text-muted m-0">Karmpegowda.in't Airport, Hunachur, karnataka, ghana</p>
                      </div>
                   </div>
                   <div data-bs-dismiss="modal" class="d-flex align-items-center gap-3 border-bottom py-3">
