--- a/edit-profile.html
+++ b/edit-profile.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
-   
-<!-- Mirrored from askbootstrap.com/preview/eatsome/edit-profile.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Jan 2025 03:09:29 GMT -->
+
 <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -54,8 +53,8 @@
                <div class="mb-3">
                   <label class="form-label text-muted">Phone Number</label>
                   <div class="input-group">
-                     <span class="input-group-text bg-white">+91</span>
-                     <input type="text" class="shadow-none form-control" placeholder="" value="1234567890">
+                     <span class="input-group-text bg-white">+233</span>
+                     <input type="text" class="shadow-none form-control">
                      <span class="input-group-text bg-white"><a href="#" class="text-decoration-none text-danger"> Change</a></span>
                   </div>
                </div>
@@ -95,7 +94,7 @@
                   <img src="img/user.jpg" class="img-fluid rounded-pill me-3 ch-50" alt="#">
                   <div class="text-white">
                      <h6 class="mb-0">Hi Your Name</h6>
-                     <small>+91 12345-67890</small><br>
+                     <small>+233 0595553746</small><br>
                      <span class="f-10 text-white-50">Version 1.32</span>
                   </div>
                </a>
@@ -104,16 +103,15 @@
             <li><a href="enable-location.html"><i class="bi bi-geo-alt me-2"></i> Enable Location</a></li>
             <li><a href="location.html"><i class="bi bi-geo me-2"></i> Add Location</a></li>
             <li>
-               <a href="#"><i class="bi bi-key me-2"></i> Authentication</a>
+               <a href="#"><i class="bi bi-key me-2"></i> Account</a>
                <ul>
                   <li><a href="signup.html">Sign In/Up</a></li>
-                  <li><a href="otp-verify.html">Verification</a></li>
+                 
                </ul>
             </li>
             <li><a href="coupons.html"><i class="bi bi-ticket-detailed me-2"></i> Coupons</a></li>
             <li><a href="offers.html"><i class="bi bi-percent me-2"></i> Offers</a></li>
             <li><a href="wallet.html"><i class="bi bi-wallet me-2"></i> Wallet</a></li>
-            <li><a href="notification-setting.html"><i class="bi bi-bell-slash me-2"></i> Notification Setting</a></li>
             <li><a href="notifications.html"><i class="bi bi-bell me-2"></i> Notifications</a></li>
             <li><a href="setting.html"><i class="bi bi-gear me-2"></i> Setting</a></li>
             <li><a href="search-list.html"><i class="bi bi-search me-2"></i> Search List</a></li>
@@ -162,6 +160,4 @@
       <script src="js/custom.js" type="a4fc2b989b3a428101cccf46-text/javascript"></script>
    <script src="../../cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="a4fc2b989b3a428101cccf46-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9011ebcd58169586","version":"2024.10.5","r":1,"serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"token":"dd471ab1978346bbb991feaa79e6ce5c","b":1}' crossorigin="anonymous"></script>
 </body>
-
-<!-- Mirrored from askbootstrap.com/preview/eatsome/edit-profile.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Jan 2025 03:09:29 GMT -->
 </html>
