--- a/index.html
+++ b/index.html
@@ -69,110 +69,12 @@
             <div class="col-3">
                <a href="search-list.html" class="text-decoration-none link-dark">
                   <div class="card border-0 bg-light">
-                     <div class="m-auto back"><img src="img/logo8.png"
+                     <div class="m-auto back"><img src="img/restuarant.jpg"
                         class="img-fluid cw-70 ch-70 rounded-circle bg-white shadow-sm border" alt="#"></div>
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title mb-1">Subwey</h6>
+                        <h6 class="card-title mb-1">Kumasi spice</h6>
                         <p class="card-text text-muted"><span><i
                            class="fa-solid fa-stopwatch text-success"></i></span>&nbsp;33 mins</p>
-                     </div>
-                  </div>
-               </a>
-            </div>
-            <div class="col-3">
-               <a href="search-list.html" class="text-decoration-none link-dark">
-                  <div class="card border-0 bg-light">
-                     <div class="m-auto back"><img src="img/logo1.png" class="img-fluid cw-70 ch-70 rounded-circle bg-white shadow-sm border" alt="#"></div>
-                     <span class="btn btn-primary badge text-white text-center m-auto position-absolute top-50 start-50 translate-middle">20% OFF</span>
-                     <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title mb-1">McDonae</h6>
-                        <p class="card-text text-muted"><span><i
-                           class="fa-solid fa-stopwatch text-success"></i></span>&nbsp;32 mins</p>
-                     </div>
-                  </div>
-               </a>
-            </div>
-            <div class="col-3">
-               <a href="store.html" class="text-decoration-none link-dark">
-                  <div class="card border-0 bg-light">
-                     <div class="m-auto back"><img src="img/logo3.png" class="img-fluid cw-70 ch-70 rounded-circle bg-white shadow-sm border" alt="#"
-                        >
-                     </div>
-                     <span class="btn btn-primary badge text-white text-center m-auto position-absolute top-50 start-50 translate-middle">20% OFF</span>
-                     <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title mb-1">Domeno</h6>
-                        <p class="card-text text-muted"><span><i
-                           class="fa-solid fa-stopwatch text-success"></i></span>&nbsp;30 mins</p>
-                     </div>
-                  </div>
-               </a>
-            </div>
-            <div class="col-3">
-               <a href="search-list.html" class="text-decoration-none link-dark">
-                  <div class="card border-0 bg-light">
-                     <div class="m-auto back"><img src="img/logo5.png" class="img-fluid cw-70 ch-70 rounded-circle bg-white shadow-sm border" alt="#">
-                     </div>
-                     <span class="btn btn-primary badge text-white text-center m-auto position-absolute top-50 start-50 translate-middle">20% OFF</span>
-                     <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title mb-1">KCC</h6>
-                        <p class="card-text text-muted"><span><i
-                           class="fa-solid fa-stopwatch text-success"></i></span>&nbsp;23 mins</p>
-                     </div>
-                  </div>
-               </a>
-            </div>
-            <!-- 2nd row -->
-            <div class="col-3">
-               <a href="search-list.html" class="text-decoration-none link-dark">
-                  <div class="card border-0 bg-light">
-                     <div class="m-auto back"><img src="img/logo4.png" class="img-fluid cw-70 ch-70 rounded-circle bg-white shadow-sm border" alt="#"></div>
-                     <span class="btn btn-primary badge text-white text-center m-auto position-absolute top-50 start-50 translate-middle"> &nbsp;Freebie</span>
-                     <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title mb-1">Burger Ping</h6>
-                        <p class="card-text text-muted"><span><i
-                           class="fa-solid fa-stopwatch text-success"></i></span>&nbsp;28 mins</p>
-                     </div>
-                  </div>
-               </a>
-            </div>
-            <div class="col-3">
-               <a href="search-list.html" class="text-decoration-none link-dark">
-                  <div class="card border-0 bg-light">
-                     <div class="m-auto back"><img src="img/logo7.png" class="img-fluid cw-70 ch-70 rounded-circle bg-white shadow-sm border" alt="#"
-                        ></div>
-                     <span class="btn btn-primary badge text-white text-center m-auto position-absolute top-50 start-50 translate-middle">60% OFF</span>
-                     <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title mb-1">Baba Chick.</h6>
-                        <p class="card-text text-muted"><span><i
-                           class="fa-solid fa-stopwatch text-success"></i></span>&nbsp;24 mins</p>
-                     </div>
-                  </div>
-               </a>
-            </div>
-            <div class="col-3">
-               <a href="search-list.html" class="text-decoration-none link-dark">
-                  <div class="card border-0 bg-light">
-                     <div class="m-auto back"><img src="img/logo2.png" class="img-fluid cw-70 ch-70 rounded-circle bg-white shadow-sm border" alt="#">
-                     </div>
-                     <span class="btn btn-primary badge text-white text-center m-auto position-absolute top-50 start-50 translate-middle">50% OFF</span>
-                     <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title mb-1">Piza Lut</h6>
-                        <p class="card-text text-muted"><span><i
-                           class="fa-solid fa-stopwatch text-success"></i></span>&nbsp;37 mins</p>
-                     </div>
-                  </div>
-               </a>
-            </div>
-            <div class="col-3">
-               <a href="search-list.html" class="text-decoration-none link-dark">
-                  <div class="card border-0 bg-light">
-                     <div class="m-auto back"><img src="img/logo6.png" class="img-fluid cw-70 ch-70 rounded-circle bg-white shadow-sm border" alt="#"
-                        ></div>
-                     <span class="btn btn-primary badge text-white text-center m-auto position-absolute top-50 start-50 translate-middle">40% OFF</span>
-                     <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title mb-1">Kwaliti Wa.</h6>
-                        <p class="card-text text-muted"><span><i
-                           class="fa-solid fa-stopwatch text-success"></i></span>&nbsp;17 mins</p>
                      </div>
                   </div>
                </a>
@@ -709,17 +611,16 @@
             <li><a href="enable-location.html"><i class="bi bi-geo-alt me-2"></i> Enable Location</a></li>
             <li><a href="location.html"><i class="bi bi-geo me-2"></i> Add Location</a></li>
             <li>
-               <a href="#"><i class="bi bi-key me-2"></i> Authentication</a>
+               <a href="#"><i class="bi bi-key me-2"></i> Account</a>
                <ul>
                   <li><a href="signup.html">Sign In/Up</a></li>
-                  <li><a href="otp-verify.html">Verification</a></li>
+                 
                </ul>
             </li>
             <li><a href="coupons.html"><i class="bi bi-ticket-detailed me-2"></i> Coupons</a></li>
             <li><a href="offers.html"><i class="bi bi-percent me-2"></i> Offers</a></li>
             <li><a href="wallet.html"><i class="bi bi-wallet me-2"></i> Wallet</a></li>
-            <li><a href="notification-setting.html"><i class="bi bi-bell-slash me-2"></i> Notification Setting</a></li>
-            <li><a href="notifications.html"><i class="bi bi-bell me-2"></i> Notifications</a></li>
+                        <li><a href="notifications.html"><i class="bi bi-bell me-2"></i> Notifications</a></li>
             <li><a href="setting.html"><i class="bi bi-gear me-2"></i> Setting</a></li>
             <li><a href="search-list.html"><i class="bi bi-search me-2"></i> Search List</a></li>
             <li><a href="store.html"><i class="bi bi-shop me-2"></i> Store</a></li>
