--- a/wallet.html
+++ b/wallet.html
@@ -267,17 +267,16 @@
             <li><a href="enable-location.html"><i class="bi bi-geo-alt me-2"></i> Enable Location</a></li>
             <li><a href="location.html"><i class="bi bi-geo me-2"></i> Add Location</a></li>
             <li>
-               <a href="#"><i class="bi bi-key me-2"></i> Authentication</a>
+               <a href="#"><i class="bi bi-key me-2"></i> Account</a>
                <ul>
                   <li><a href="signup.html">Sign In/Up</a></li>
-                  <li><a href="otp-verify.html">Verification</a></li>
+                 
                </ul>
             </li>
             <li><a href="coupons.html"><i class="bi bi-ticket-detailed me-2"></i> Coupons</a></li>
             <li><a href="offers.html"><i class="bi bi-percent me-2"></i> Offers</a></li>
             <li><a href="wallet.html"><i class="bi bi-wallet me-2"></i> Wallet</a></li>
-            <li><a href="notification-setting.html"><i class="bi bi-bell-slash me-2"></i> Notification Setting</a></li>
-            <li><a href="notifications.html"><i class="bi bi-bell me-2"></i> Notifications</a></li>
+                        <li><a href="notifications.html"><i class="bi bi-bell me-2"></i> Notifications</a></li>
             <li><a href="setting.html"><i class="bi bi-gear me-2"></i> Setting</a></li>
             <li><a href="search-list.html"><i class="bi bi-search me-2"></i> Search List</a></li>
             <li><a href="store.html"><i class="bi bi-shop me-2"></i> Store</a></li>
