--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                               <div><img src="img/delivery.png" alt="" class="img-fluid ch-30"></div>
                               <div class="text-muted small">Follows all Max Safety measures to<br> ensure your
                                  food
-                                 id safe
+                                 is safe
                               </div>
                            </div>
                            <div><img src="img/graph-up.png" alt="" class="img-fluid ch-30 cw-30"></div>
