--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                   <div class="card border-0">
                      <img src="./Foods/daily/amgwamoo.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Angwamoo</h6>
+                        <h6 class="card-title text-muted m-0">Angwamo</h6>
                      </div>
                   </div>
                </a>
@@ -100,7 +100,7 @@
                   <div class="card border-0">
                      <img src="./Foods/daily/assorted-rice.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Assorted Rice</h6>
+                        <h6 class="card-title text-muted m-0">Assorted</h6>
                      </div>
                   </div>
                </a>
