--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                   <div class="card border-0">
                      <img src="./Foods/sunday/fufu.png" class="img-fluid m-auto ch-70 cw-70 rounded-pill" alt="#">
                      <div class="card-body text-center px-0 pb-0">
-                        <h6 class="card-title text-muted m-0">Food</h6>
+                        <h6 class="card-title text-muted m-0">Fufu</h6>
                      </div>
                   </div>
                </a>
@@ -394,7 +394,7 @@
                   <img src="img/user.jpg" class="img-fluid rounded-pill me-3 ch-50" alt="#">
                   <div class="text-white">
                      <h6 class="mb-0">Hi Your Name</h6>
-                     <small>+91 12345-67890</small><br>
+                     <small>+233 0595553746</small><br>
                      <span class="f-10 text-white-50">Version 1.32</span>
                   </div>
                </a>
