--- a/offers.html
+++ b/offers.html
@@ -69,7 +69,7 @@
                   <a href="search-list.html" class="text-decoration-none link-dark">
                      <div class="card bg-light border-0">
                         <div class="product-offer-back"><img
-                           src="img/o1.jpg"
+                           src="img/restuarant.jpg"
                            alt="" class="img-fluid rounded-md"></div>
                         <!-- product time  -->
                         <div class="product-rating shadow-sm">
@@ -183,9 +183,9 @@
                <div class="col-3">
                   <a href="search-list.html" class="text-decoration-none">
                      <div class="card border-0">
-                        <img src="img/d9.png" class="img-fluid m-auto ch-70" alt="#">
+                        <img src="./Foods/daily/singapore-noddles.png" class="img-fluid m-auto ch-70" alt="#">
                         <div class="card-body text-center px-0 pb-0">
-                           <h6 class="card-title text-muted">Sweets</h6>
+                           <h6 class="card-title text-muted">Noddles</h6>
                         </div>
                      </div>
                   </a>
@@ -193,9 +193,9 @@
                <div class="col-3">
                   <a href="search-list.html" class="text-decoration-none">
                      <div class="card border-0">
-                        <img src="img/d1.png" class="img-fluid rounded-circle m-auto ch-70" alt="#">
+                        <img src="./Foods/daily/jollof.png" class="img-fluid rounded-circle m-auto ch-70" alt="#">
                         <div class="card-body text-center px-0 pb-0">
-                           <h6 class="card-title text-muted">Samosa</h6>
+                           <h6 class="card-title text-muted">jollof</h6>
                         </div>
                      </div>
                   </a>
@@ -213,9 +213,9 @@
                <div class="col-3">
                   <a href="#" class="text-decoration-none">
                      <div class="card border-0">
-                        <img src="img/d5.png" class="img-fluid rounded-circle m-auto ch-70" alt="#">
+                        <img src="./Foods/sunday/fufu.png" class="img-fluid rounded-circle m-auto ch-70" alt="#">
                         <div class="card-body text-center px-0 pb-0">
-                           <h6 class="card-title text-muted">Noddles</h6>
+                           <h6 class="card-title text-muted">Fufu</h6>
                         </div>
                      </div>
                   </a>
