--- a/offers.html
+++ b/offers.html
@@ -69,14 +69,14 @@
                   <a href="search-list.html" class="text-decoration-none link-dark">
                      <div class="card bg-light border-0">
                         <div class="product-offer-back"><img
-                           src="img/restuarant.jpg"
+                           src="img/restuarant (1).jpg"
                            alt="" class="img-fluid rounded-md"></div>
                         <!-- product time  -->
                         <div class="product-rating shadow-sm">
                            <span class="badge bg-success">4.2<i class="fa-solid fa-star"></i></span>
                         </div>
                         <div class="card-body px-0 pb-0 pt-2">
-                           <h5 class="fw-bold mb-0">Om Corner</h5>
+                           <h5 class="fw-bold mb-0">Kumasi Spice</h5>
                            <p class="text-muted m-0 mt-1 small">60% OFF up to $120</p>
                         </div>
                      </div>
