--- a/coupons.html
+++ b/coupons.html
@@ -50,43 +50,43 @@
          <div>
             <div class="mb-2">
                <div class="mb-3"><img src="img/p1.png" alt="" class="img-fluid ch-40 border rounded-2"></div>
-               <div class="h4 m-0">Get 50% OFF up to $100</div>
+               <div class="h4 m-0">Get 50% OFF up to Gh100</div>
             </div>
-            <p class="text-muted">Valid on total value of items worth $159 or more.&nbsp;<span
+            <p class="text-muted">Valid on total value of items worth Gh159 or more.&nbsp;<span
                class="text-dark">View Details</span></p>
             <div class="d-flex justify-content-between pb-3 align-items-center">
                <div class="text-uppercase fw-bold border border-danger text-danger rounded px-2 py-1 h5 m-0">maxsafety</div>
                <div><a href="offers.html" class="text-decoration-none text-danger">Apply</a></div>
             </div>
-            <div class="text-primary">You will save $100 with this code</div>
+            <div class="text-primary">You will save Gh100 with this code</div>
          </div>
          <hr>
          <div>
             <div class="mb-2">
                <div class="mb-3"><img src="img/p1.png" alt="" class="img-fluid ch-40 border rounded-2"></div>
-               <div class="h4 m-0">50% OFF up to $100 and $30 Paytm cashback using Paytm</div>
+               <div class="h4 m-0">50% OFF up to Gh100 and Gh30 Paytm cashback using Paytm</div>
             </div>
-            <p class="text-muted">Valid on total value of items worth $159 or more.&nbsp;<span
+            <p class="text-muted">Valid on total value of items worth Gh159 or more.&nbsp;<span
                class="text-dark">View Details</span></p>
             <div class="d-flex justify-content-between pb-3 align-items-center">
                <div class="text-uppercase fw-bold border border-danger text-danger rounded px-2 py-1 h5 m-0">zompaytm</div>
                <div><a href="offers.html" class="text-decoration-none text-danger">Apply</a></div>
             </div>
-            <div class="text-primary">You will save $100 & get extra cashback with this code</div>
+            <div class="text-primary">You will save Gh100 & get extra cashback with this code</div>
          </div>
          <hr>
          <div>
             <div class="mb-2">
                <div class="mb-3"><img src="img/p2.png" alt="" class="img-fluid ch-40 border rounded-2"></div>
-               <div class="h4 m-0">Get 60% OFF up to $140</div>
+               <div class="h4 m-0">Get 60% OFF up to Gh140</div>
             </div>
-            <p class="text-muted">Valid on total value of items worth $159 or more.&nbsp;<span
+            <p class="text-muted">Valid on total value of items worth Gh159 or more.&nbsp;<span
                class="text-dark">View Details</span></p>
             <div class="d-flex justify-content-between pb-3 align-items-center">
                <div class="text-uppercase fw-bold border border-danger text-danger rounded px-2 py-1 h5 m-0">simplparty</div>
                <div><a href="offers.html" class="text-decoration-none text-danger">Apply</a></div>
             </div>
-            <div class="text-primary">You will save $140 with this code</div>
+            <div class="text-primary">You will save Gh140 with this code</div>
          </div>
       </div>
       <!-- sidebar -->
