--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                               <div><i class="fa-solid fa-percent fs-5"></i></div>
                               <div>
                                  <div>50% OFF</div>
-                                 <div class="fw-normal">Up to $100</div>
+                                 <div class="fw-normal">Up to Gh100</div>
                               </div>
                            </div>
                         </div>
