--- a/order-details.html
+++ b/order-details.html
@@ -65,9 +65,9 @@
                <div class="d-flex gap-2 align-items-center fs-5">
                   <div class="rounded border border-success small px-2 d-flex">1</div>
                   <div>x</div>
-                  <div>$150</div>
+                  <div>Gh150</div>
                </div>
-               <div class="fs-5 fw-bold"><del class="small text-muted">$150</del>&nbsp;$127.50</div>
+               <div class="fs-5 fw-bold"><del class="small text-muted">Gh150</del>&nbsp;Gh127.50</div>
             </div>
          </div>
          <hr>
@@ -83,9 +83,9 @@
                <div class="d-flex gap-2 align-items-center fs-5">
                   <div class="rounded border border-success small px-2 d-flex">1</div>
                   <div>x</div>
-                  <div>$90</div>
+                  <div>Gh90</div>
                </div>
-               <div class="fs-5 fw-bold"><del class="small text-muted">$90</del>&nbsp;$76.50</div>
+               <div class="fs-5 fw-bold"><del class="small text-muted">Gh90</del>&nbsp;Gh76.50</div>
             </div>
          </div>
          <hr>
@@ -93,37 +93,37 @@
          <div>
             <div class="d-flex justify-content-between mb-1">
                <div>Items Total</div>
-               <div><del>$240</del>&nbsp;$204.50</div>
+               <div><del>Gh240</del>&nbsp;Gh204.50</div>
             </div>
             <div class="d-flex justify-content-between text-primary mb-1">
                <div>Coupon - (MAXSAFETY)</div>
-               <div>you saved&nbsp;$204.50</div>
+               <div>you saved&nbsp;Gh204.50</div>
             </div>
             <div class="d-flex justify-content-between mb-1">
                <div>Taxes</div>
-               <div>$5.20</div>
+               <div>Gh5.20</div>
             </div>
             <div class="d-flex justify-content-between mb-1">
                <div>Delivery Charge</div>
-               <div>$9,00</div>
+               <div>Gh9,00</div>
             </div>
             <div class="d-flex justify-content-between mb-1">
-               <div>Donate $2 to Feeding ghana</div>
-               <div>$2,00</div>
+               <div>Donate Gh2 to Feeding ghana</div>
+               <div>Gh2,00</div>
             </div>
             <div class="d-flex justify-content-between mb-1">
                <div>Cash Round Off</div>
-               <div>$0,80</div>
+               <div>Gh0,80</div>
             </div>
             <!-- Grand total -->
             <div class="d-flex justify-content-between h3 fw-bold my-3">
                <div>Grand Total</div>
-               <div>$101,00</div>
+               <div>Gh101,00</div>
             </div>
             <!-- saving -->
             <div class="d-flex justify-content-between border border-primary rounded text-primary p-2 h4 mb-0">
                <div>Your total savings</div>
-               <div>$156</div>
+               <div>Gh156</div>
             </div>
          </div>
          <!-- Order details -->
