--- a/payment.html
+++ b/payment.html
@@ -29,7 +29,7 @@
          <div class="d-flex align-items-center">
             <div class="gap-3 d-flex align-items-center">
                <a href="checkout.html"><i class="bi bi-arrow-left d-flex text-danger h2 m-0 back-page"></i></a>
-               <h3 class="fw-bold m-0">Bill total: $249.30</h3>
+               <h3 class="fw-bold m-0">Bill total: Gh249.30</h3>
             </div>
             <div class="ms-auto gap-3 d-flex align-items-center">
                <a href="notifications.html" class="link-dark"><i class="bi bi-bell d-flex m-0 h2"></i></a>
