--- a/search-list.html
+++ b/search-list.html
@@ -90,7 +90,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Burger, Fast Food, Beverages</div>
-                           <div>$150 for one</div>
+                           <div>Gh150 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -118,7 +118,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Fast Food Burger</div>
-                           <div>$100 for one</div>
+                           <div>Gh100 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -146,7 +146,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Pizza, Fast Food</div>
-                           <div>$170 for one</div>
+                           <div>Gh170 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -174,7 +174,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Pizza, Fast Food</div>
-                           <div>$200 for one</div>
+                           <div>Gh200 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -202,7 +202,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Fast Food, Burger, Pizza</div>
-                           <div>$150 for one</div>
+                           <div>Gh150 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -230,7 +230,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>North ghanan,chines, Fast...</div>
-                           <div>$200 for one</div>
+                           <div>Gh200 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
