--- a/checkout.html
+++ b/checkout.html
@@ -47,7 +47,7 @@
                   class="img-fluid mb-auto ch-20" alt="#">
                <div>
                   <h6 class="fw-bold mb-1">Mushroom Matar</h6>
-                  <p class="mb-0">$150</p>
+                  <p class="mb-0">Gh150</p>
                   <p class="small text-muted m-0">Pan, Personal</p>
                </div>
                <div class="ms-auto text-end cw-80">
@@ -67,7 +67,7 @@
                   class="img-fluid mb-auto ch-20" alt="#">
                <div>
                   <h6 class="fw-bold mb-1">Plain Rice</h6>
-                  <p class="mb-0">$90</p>
+                  <p class="mb-0">Gh90</p>
                   <p class="small text-muted m-0">Pan, Personal</p>
                </div>
                <div class="ms-auto text-end cw-80">
@@ -106,7 +106,7 @@
       <div class="bg-white p-3 mb-3 shadow-sm">
          <div class="d-flex justify-content-between">
             <div>Item Total</div>
-            <div>$218.00</div>
+            <div>Gh218.00</div>
          </div>
          <!-- accordion -->
          <div class="accordion">
@@ -123,11 +123,11 @@
                   <div class="accordion-body px-0 pt-0">
                      <div class="d-flex justify-content-between text-muted mb-2">
                         <div>Delivery Charges for 3 Km</div>
-                        <div><span class="text-danger"><del>$19</del></span> FREE</div>
+                        <div><span class="text-danger"><del>Gh19</del></span> FREE</div>
                      </div>
                      <div class="d-flex justify-content-between text-muted">
                         <div>Taxes</div>
-                        <div>$12.50</div>
+                        <div>Gh12.50</div>
                      </div>
                   </div>
                </div>
@@ -135,7 +135,7 @@
          </div>
          <div class="d-flex justify-content-between h4 fw-bold">
             <div>Grand Total</div>
-            <div>$229.50</div>
+            <div>Gh229.50</div>
          </div>
       </div>
       <!-- Tip  -->
@@ -149,15 +149,15 @@
          <div class="d-flex gap-2">
             <input type="radio" class="btn-check" name="btnradio" id="btnradio1" checked>
             <label class="btn btn-outline-danger btn-sm" for="btnradio1">
-            <i class="bi bi-wallet"></i>&nbsp;$20
+            <i class="bi bi-wallet"></i>&nbsp;Gh20
             </label>
             <input type="radio" class="btn-check" name="btnradio" id="btnradio2">
             <label class="btn btn-outline-danger btn-sm" for="btnradio2">
-            <i class="bi bi-wallet"></i>&nbsp;$30
+            <i class="bi bi-wallet"></i>&nbsp;Gh30
             </label>
             <input type="radio" class="btn-check" name="btnradio" id="btnradio3">
             <label class="btn btn-outline-danger btn-sm" for="btnradio3">
-            <i class="bi bi-wallet"></i>&nbsp;$50
+            <i class="bi bi-wallet"></i>&nbsp;Gh50
             </label>
             <input type="radio" class="btn-check" name="btnradio" id="btnradio4">
             <label class="btn btn-outline-danger btn-sm" for="btnradio4">
