--- a/offers.html
+++ b/offers.html
@@ -77,7 +77,7 @@
                         </div>
                         <div class="card-body px-0 pb-0 pt-2">
                            <h5 class="fw-bold mb-0">Kumasi Spice</h5>
-                           <p class="text-muted m-0 mt-1 small">60% OFF up to $120</p>
+                           <p class="text-muted m-0 mt-1 small">60% OFF up to Gh120</p>
                         </div>
                      </div>
                   </a>
@@ -95,7 +95,7 @@
                         </div>
                         <div class="card-body px-0 pb-0 pt-2">
                            <h5 class="fw-bold mb-0">Dhir Refresh..</h5>
-                           <p class="text-muted m-0 mt-1 small">60% OFF up to $120</p>
+                           <p class="text-muted m-0 mt-1 small">60% OFF up to Gh120</p>
                         </div>
                      </div>
                   </a>
@@ -113,7 +113,7 @@
                         </div>
                         <div class="card-body px-0 pb-0 pt-2">
                            <h5 class="fw-bold mb-0">Spicy Food</h5>
-                           <p class="text-muted m-0 mt-1 small">60% OFF up to $120</p>
+                           <p class="text-muted m-0 mt-1 small">60% OFF up to Gh120</p>
                         </div>
                      </div>
                   </a>
@@ -131,7 +131,7 @@
                         </div>
                         <div class="card-body px-0 pb-0 pt-2">
                            <h5 class="fw-bold mb-0">Pizza Hut</h5>
-                           <p class="text-muted m-0 mt-1 small">50% OFF up to $120</p>
+                           <p class="text-muted m-0 mt-1 small">50% OFF up to Gh120</p>
                         </div>
                      </div>
                   </a>
@@ -149,7 +149,7 @@
                         </div>
                         <div class="card-body px-0 pb-0 pt-2">
                            <h5 class="fw-bold mb-0">Prem Bakers</h5>
-                           <p class="text-muted m-0 mt-1 small">50% OFF up to $100</p>
+                           <p class="text-muted m-0 mt-1 small">50% OFF up to Gh100</p>
                         </div>
                      </div>
                   </a>
@@ -167,7 +167,7 @@
                         </div>
                         <div class="card-body px-0 pb-0 pt-2">
                            <h5 class="fw-bold mb-0">Laziz Family</h5>
-                           <p class="text-muted m-0 mt-1 small">50% OFF up to $100</p>
+                           <p class="text-muted m-0 mt-1 small">50% OFF up to Gh100</p>
                         </div>
                      </div>
                   </a>
@@ -195,7 +195,7 @@
                      <div class="card border-0">
                         <img src="./Foods/daily/jollof.png" class="img-fluid rounded-circle m-auto ch-70" alt="#">
                         <div class="card-body text-center px-0 pb-0">
-                           <h6 class="card-title text-muted">jollof</h6>
+                           <h6 class="card-title text-muted">Jollof</h6>
                         </div>
                      </div>
                   </a>
@@ -203,9 +203,9 @@
                <div class="col-3">
                   <a href="search-list.html" class="text-decoration-none link-dark">
                      <div class="card border-0">
-                        <img src="img/d4.png" class="img-fluid m-auto ch-70" alt="#">
+                        <img src="./Foods/Fridays/frenchfries.png" class="img-fluid m-auto ch-70" alt="#">
                         <div class="card-body text-center px-0 pb-0">
-                           <h6 class="card-title text-muted">Pizza</h6>
+                           <h6 class="card-title text-muted">French Fries</h6>
                         </div>
                      </div>
                   </a>
@@ -279,7 +279,7 @@
                               <div><i class="fa-solid fa-percent fs-5"></i></div>
                               <div>
                                  <div>50% OFF</div>
-                                 <div class="fw-normal">Up to $100</div>
+                                 <div class="fw-normal">Up to Gh100</div>
                               </div>
                            </div>
                         </div>
@@ -296,7 +296,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Pizza, Fast Food, Beverages</div>
-                           <div>$200 for one</div>
+                           <div>Gh200 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -337,8 +337,8 @@
                            </div>
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
-                           <div>Burger, Fast Food, Beverages</div>
-                           <div>$80 for one</div>
+                           <div>Fast Food, Beverages</div>
+                           <div>Gh80 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -375,7 +375,7 @@
                               <div><i class="fa-solid fa-percent fs-5"></i></div>
                               <div>
                                  <div>40% OFF</div>
-                                 <div class="fw-normal">Up to $100</div>
+                                 <div class="fw-normal">Up to Gh100</div>
                               </div>
                            </div>
                         </div>
@@ -388,7 +388,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>North ghana</div>
-                           <div>$100 for one</div>
+                           <div>Gh100 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -425,7 +425,7 @@
                               <div><i class="fa-solid fa-percent fs-5"></i></div>
                               <div>
                                  <div>10% OFF</div>
-                                 <div class="fw-normal">Up to $100</div>
+                                 <div class="fw-normal">Up to Gh100</div>
                               </div>
                            </div>
                         </div>
@@ -438,7 +438,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Fast Food, CHinese</div>
-                           <div>$100 for one</div>
+                           <div>Gh100 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -469,7 +469,7 @@
                               <div><i class="fa-solid fa-percent fs-5"></i></div>
                               <div>
                                  <div>40% OFF</div>
-                                 <div class="fw-normal">Up to $100</div>
+                                 <div class="fw-normal">Up to Gh100</div>
                               </div>
                            </div>
                         </div>
@@ -486,7 +486,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Pizza, Burger, Fast Food</div>
-                           <div>$100 for one</div>
+                           <div>Gh100 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
@@ -517,7 +517,7 @@
                               <div><i class="fa-solid fa-percent fs-5"></i></div>
                               <div>
                                  <div>40% OFF</div>
-                                 <div class="fw-normal">Up to $100</div>
+                                 <div class="fw-normal">Up to Gh100</div>
                               </div>
                            </div>
                         </div>
@@ -530,7 +530,7 @@
                         </div>
                         <div class="d-flex justify-content-between text-muted h6 m-0 fw-normal">
                            <div>Pizza, Burger, Fast Food</div>
-                           <div>$100 for one</div>
+                           <div>Gh100 for one</div>
                         </div>
                      </div>
                      <div class="card-footer p-3 border-0">
