--- a/store.html
+++ b/store.html
@@ -132,7 +132,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">Sweet Corn Pizza</h3>
                                  <p class="small text-muted mb-3">In Meal</p>
-                                 <h6 class="fw-bold">$146</h6>
+                                 <h6 class="fw-bold">Gh146</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -168,7 +168,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">Tandoori Pizza</h3>
                                  <p class="small text-muted mb-3">In Pizza and Pasta</p>
-                                 <h6 class="fw-bold">$370</h6>
+                                 <h6 class="fw-bold">Gh370</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -204,7 +204,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">Chess Pizza</h3>
                                  <p class="small text-muted mb-3">In Pizza and Chess</p>
-                                 <h6 class="fw-bold">$400</h6>
+                                 <h6 class="fw-bold">Gh400</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -245,7 +245,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">Sweet Corn Pizza</h3>
                                  <p class="small text-muted mb-3">In Meal</p>
-                                 <h6 class="fw-bold">$146</h6>
+                                 <h6 class="fw-bold">Ghh146</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -281,7 +281,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">All Pizza</h3>
                                  <p class="small text-muted mb-3">In Pizza and Pasta</p>
-                                 <h6 class="fw-bold">$500</h6>
+                                 <h6 class="fw-bold">Ghh500</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -317,7 +317,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">Chess Pizza</h3>
                                  <p class="small text-muted mb-3">In Pizza and Chess</p>
-                                 <h6 class="fw-bold">$400</h6>
+                                 <h6 class="fw-bold">Gh400</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -355,7 +355,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">Sweet Corn Pizza</h3>
                                  <p class="small text-muted mb-3">In Meal</p>
-                                 <h6 class="fw-bold">$146</h6>
+                                 <h6 class="fw-bold">Gh146</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -391,7 +391,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">All Pizza</h3>
                                  <p class="small text-muted mb-3">In Pizza and Pasta</p>
-                                 <h6 class="fw-bold">$500</h6>
+                                 <h6 class="fw-bold">Gh500</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -427,7 +427,7 @@
                                  </div>
                                  <h3 class="fw-bold mb-1">Chess Pizza</h3>
                                  <p class="small text-muted mb-3">In Pizza and Chess</p>
-                                 <h6 class="fw-bold">$400</h6>
+                                 <h6 class="fw-bold">Gh400</h6>
                                  <div class="badge border border-warning">
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
                                     <span><i class="fa-solid fa-star text-warning"></i></span>
@@ -517,40 +517,40 @@
                      <div>
                         <div class="mb-2">
                            <div class="mb-3"><img src="img/p1.png" alt="" class="img-fluid ch-40 border rounded-2"></div>
-                           <div class="h4 m-0">Get 50% OFF up to $100</div>
+                           <div class="h4 m-0">Get 50% OFF up to Gh100</div>
                         </div>
-                        <p class="text-muted">Valid on total value of items worth $159 or more.&nbsp;<span class="text-dark">View Details</span></p>
+                        <p class="text-muted">Valid on total value of items worth Gh159 or more.&nbsp;<span class="text-dark">View Details</span></p>
                         <div class="d-flex justify-content-between pb-3 align-items-center">
                            <div class="text-uppercase fw-bold border border-danger text-danger rounded px-2 py-1 h5 m-0">maxsafety</div>
                            <div><a href="#" data-bs-dismiss="modal" aria-label="Close" class="text-decoration-none text-danger">Apply</a></div>
                         </div>
-                        <div class="text-primary">You will save $100 with this code</div>
+                        <div class="text-primary">You will save Gh100 with this code</div>
                      </div>
                      <hr>
                      <div>
                         <div class="mb-2">
                            <div class="mb-3"><img src="img/p1.png" alt="" class="img-fluid ch-40 border rounded-2"></div>
-                           <div class="h4 m-0">50% OFF up to $100 and $30 Paytm cashback using Paytm</div>
+                           <div class="h4 m-0">50% OFF up to Ghh100 andGhGh30 Paytm cashback using Paytm</div>
                         </div>
-                        <p class="text-muted">Valid on total value of items worth $159 or more.&nbsp;<span class="text-dark">View Details</span></p>
+                        <p class="text-muted">Valid on total value of items worth Gh159 or more.&nbsp;<span class="text-dark">View Details</span></p>
                         <div class="d-flex justify-content-between pb-3 align-items-center">
                            <div class="text-uppercase fw-bold border border-danger text-danger rounded px-2 py-1 h5 m-0">zompaytm</div>
                            <div><a href="#" data-bs-dismiss="modal" aria-label="Close" class="text-decoration-none text-danger">Apply</a></div>
                         </div>
-                        <div class="text-primary">You will save $100 &amp; get extra cashback with this code</div>
+                        <div class="text-primary">You will save Gh100 &amp; get extra cashback with this code</div>
                      </div>
                      <hr>
                      <div>
                         <div class="mb-2">
                            <div class="mb-3"><img src="img/p2.png" alt="" class="img-fluid ch-40 border rounded-2"></div>
-                           <div class="h4 m-0">Get 60% OFF up to $140</div>
+                           <div class="h4 m-0">Get 60% OFF up to Gh140</div>
                         </div>
-                        <p class="text-muted">Valid on total value of items worth $159 or more.&nbsp;<span class="text-dark">View Details</span></p>
+                        <p class="text-muted">Valid on total value of items worth Gh159 or more.&nbsp;<span class="text-dark">View Details</span></p>
                         <div class="d-flex justify-content-between pb-3 align-items-center">
                            <div class="text-uppercase fw-bold border border-danger text-danger rounded px-2 py-1 h5 m-0">simplparty</div>
                            <div><a href="#" data-bs-dismiss="modal" aria-label="Close" class="text-decoration-none text-danger">Apply</a></div>
                         </div>
-                        <div class="text-primary">You will save $140 with this code</div>
+                        <div class="text-primary">You will save Gh140 with this code</div>
                      </div>
                   </div>
                </div>
