--- a/wallet.html
+++ b/wallet.html
@@ -162,7 +162,7 @@
             <div><i class="fa-solid fa-bars-progress text-danger h1 m-0 cw-30 text-center"></i></div>
             <div>
                <h4 class="fw-bold mb-1">Complimentry Eatsome Pro</h4>
-               <p class="text-muted m-0">Get Eatsome Pro for 3 month on adding $5,000 or more</p>
+               <p class="text-muted m-0">Get Eatsome Pro for 3 month on adding Gh5,000 or more</p>
             </div>
          </div>
       </div>
