--- a/your-order.html
+++ b/your-order.html
@@ -79,7 +79,7 @@
                   <a href="#" class="text-decoration-none link-dark">
                      <div class="d-flex justify-content-between">
                         <div class="text-muted">04 Mar 2023 at 2.22PM</div>
-                        <div class="fw-bold">$101.00&nbsp;<i class="fa-solid fa-chevron-right text-muted"></i></div>
+                        <div class="fw-bold">Gh101.00&nbsp;<i class="fa-solid fa-chevron-right text-muted"></i></div>
                      </div>
                   </a>
                   <hr>
@@ -119,7 +119,7 @@
                   <a href="#" class="text-decoration-none link-dark">
                      <div class="d-flex justify-content-between">
                         <div class="text-muted">11 Jan 2023 at 9.23PM</div>
-                        <div class="fw-bold">$230.50&nbsp;<i class="fa-solid fa-chevron-right text-muted"></i></div>
+                        <div class="fw-bold">Gh230.50&nbsp;<i class="fa-solid fa-chevron-right text-muted"></i></div>
                      </div>
                   </a>
                   <hr>
@@ -158,7 +158,7 @@
                   <a href="#" class="text-decoration-none link-dark">
                      <div class="d-flex justify-content-between">
                         <div class="text-muted">28 Feb 2023 at 3.47PM</div>
-                        <div class="fw-bold">$310.75&nbsp;<i class="fa-solid fa-chevron-right text-muted"></i></div>
+                        <div class="fw-bold">Gh310.75&nbsp;<i class="fa-solid fa-chevron-right text-muted"></i></div>
                      </div>
                   </a>
                   <hr>
