--- a/offers.html
+++ b/offers.html
@@ -25,20 +25,17 @@
    </head>
    <body>
       <!-- Navbar -->
-      <div class="bg-white shadow-sm px-3 pt-3">
-         <div class="d-flex align-items-center">
-            <div class="gap-3 d-flex align-items-center">
-               <a href="index.html"><i class="bi bi-arrow-left d-flex text-danger h2 m-0 back-page"></i></a>
-               <button type="button" class="btn bg-white border-0 p-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                  <span class="text-danger h4 m-0"><i class="fa-solid fa-location-dot"></i>&nbsp;<span>Set
-                     Location</span>&nbsp;<i class="fa-solid fa-chevron-down"></i>
-                  </span>
-               </button>
-            </div>
-            <div class="ms-auto gap-3 d-flex align-items-center">
-               <a href="notifications.html" class="link-dark"><i class="bi bi-bell d-flex m-0 h2"></i></a>
-               <a class="toggle osahan-toggle text-dark m-0" href="#"><i class="bi bi-list d-flex m-0 h1"></i></a>
-            </div>
+      <div class="osahan-header-nav px-3 pt-3 d-flex align-items-center bg-danger">
+         <h5 class="font-weight-normal mb-0 text-white">
+            <button type="button" class="btn bg-danger text-white border-0 p-0" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+               <span class="text-white h4 m-0"><i class="fa-solid fa-location-dot"></i>&nbsp;<span>Set
+                  Location</span>&nbsp;<i class="fa-solid fa-chevron-down"></i>
+               </span>
+            </button>
+         </h5>
+         <div class="ms-auto gap-3 d-flex align-items-center">
+            <a href="notifications.html" class="text-white"><i class="bi bi-bell d-flex m-0 h2"></i></a>
+            <a class="toggle osahan-toggle text-white m-0" href="#"><i class="bi bi-list d-flex m-0 h1"></i></a>
          </div>
       </div>
       <!-- Search bar -->
