--- a/rider.html
+++ b/rider.html
@@ -1,7 +1,6 @@
 <!doctype html>
 <html lang="en">
-   
-<!-- Mirrored from askbootstrap.com/preview/eatsome/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Jan 2025 03:09:30 GMT -->
+
 <head>
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -24,58 +23,72 @@
       <link rel="stylesheet" href="css/style.css">
    </head>
    <body>
-      <div><img src="img/Orange Simple Special Ramen Promotion Banner Landscape.png" alt="" class="img-fluid"></div>
-      <div class="bg-white p-4">
-         <div class="text-center px-4 mb-4">
-            <h1 class="fw-bold">Ghana's #1 Food Delivery and Dining App</h1>
-         </div>
-         <div class="d-flex gap-3 align-items-center justify-content-center mb-2">
-            <div class="w-25">
-               <hr>
+      <!-- Navbar -->
+      <div class="bg-white shadow-sm p-3">
+         <div class="d-flex align-items-center">
+            <div class="gap-3 d-flex align-items-center">
+               <a href="index.html"><i class="bi bi-arrow-left d-flex text-danger h2 m-0 back-page"></i></a>
+               <h3 class="fw-bold m-0">Rider</h3>
             </div>
-            <div class="text-muted">Log in or sign up</div>
-            <div class="w-25">
-               <hr>
+            <div class="ms-auto gap-3 d-flex align-items-center">
+               <a href="notifications.html" class="link-dark"><i class="bi bi-bell d-flex m-0 h2"></i></a>
+               <a class="toggle osahan-toggle text-dark m-0" href="#"><i class="bi bi-list d-flex m-0 h1"></i></a>
             </div>
          </div>
-         <div class="mb-3">
+      </div>
+      <!-- body -->
+      <div class="p-3 text-center bg-light">
+         <div>  <img src="img/user.jpg" alt="" class="img-fluid cw-70 ch-70 rounded-pill mb-3"></div>
+         <a href="#" class="btn btn-sm btn-outline-danger">Select Photo</a>
+      </div>
+      <div class="p-3">
+         <div>
             <form>
-               <div class="input-group mb-2">
-                  <span class="input-group-text rounded-3 bg-white me-2 p-0">
-                     <select class="form-select border-0" aria-label="Default select example" >
-                        <option selected>+233</option>
-                     </select>
-                  </span>
-                  <input type="number" class="shadow-none form-control rounded-3" placeholder="Enter Your Number"  required>
+               <!-- Name -->
+               <div class="mb-3">
+                  <label class="form-label text-muted">Full Name</label>
+                  <input type="text" class="shadow-none form-control" value="yourname">
                </div>
-               <div class="d-grid">
-                  <a href="otp-verify.html" class="btn btn-danger btn-lg">Continue</a>
+               <!-- phone no -->
+               <div class="mb-3">
+                  <label class="form-label text-muted">Phone Number</label>
+                  <div class="input-group">
+                     <span class="input-group-text bg-white">+233</span>
+                     <input type="text" class="shadow-none form-control">
+                     <span class="input-group-text bg-white"><a href="#" class="text-decoration-none text-danger"> Change</a></span>
+                  </div>
                </div>
+               <!-- email -->
+               <div class="mb-3">
+                  <label class="form-label text-muted">Email</label>
+                  <div class="input-group">
+                     <input type="email" class="shadow-none form-control" placeholder="Username" value="example@gmail.com">
+                     <span class="input-group-text bg-white"><a href="#" class="text-decoration-none text-danger"> Change</a></span>
+                  </div>
+               </div>
+               <!-- Ghana Card -->
+               <div class="mb-3">
+                <label class="form-label text-muted">National Identity Card No:</label>
+                <input type="email" class="shadow-none form-control">
+                </div>
+
+               <!-- Location -->
+               <div class="mb-3">
+                  <label class="form-label text-muted">Font of Card</label>
+                  <input type="file" id="fileUpload" name="fileUpload" required>
+               </div>
+               <div class="mb-3">
+                <label class="form-label text-muted">Back of Card</label>
+                <input type="file" id="fileUpload" name="fileUpload" required>
+                </div>
             </form>
          </div>
-         <div class="d-flex gap-3 align-items-center justify-content-center mb-2">
-            <div class="w-50">
-               <hr>
-            </div>
-            <div class="text-muted">or</div>
-            <div class="w-50">
-               <hr>
-            </div>
-         </div>
-         <div class="d-flex gap-3 align-items-center justify-content-center mb-4">
-            <div><a href="index.html" class="text-decoration-none link-dark btn btn-light ch-40 cw-40 p-0 d-flex align-items-center justify-content-center border rounded-pill h1 text-muted"><i class="bi bi-google d-flex"></i></a></div>
-            <div><a href="index.html" class="text-decoration-none link-dark btn btn-light ch-40 cw-40 p-0 d-flex align-items-center justify-content-center border rounded-pill h1 text-muted"><i class="bi bi-apple d-flex"></i></a></div>
-            <div><a href="index.html" class="text-decoration-none link-dark btn btn-light ch-40 cw-40 p-0 d-flex align-items-center justify-content-center border rounded-pill h1 text-muted"><i class="bi bi-facebook d-flex"></i></a></div>
-            <div><a href="index.html" class="text-decoration-none link-dark btn btn-light ch-40 cw-40 p-0 d-flex align-items-center justify-content-center border rounded-pill h1 text-muted"><i class="bi bi-twitter d-flex"></i></a></div>
-         </div>
-         <!-- Details -->
-         <div class="text-center">
-            <p class="small mb-2 text-muted">By continuing you agree to our</p>
-            <div class="d-flex justify-content-center gap-3 small">
-               <div><a href="#" class="link-dark">Terms of Service</a></div>
-               <div><a href="#" class="link-dark">Privacy Policy</a></div>
-               <div><a href="#" class="link-dark">Content Policy</a></div>
-            </div>
+      </div>
+      <div class="p-5"></div>
+      <!-- fixed bottom -->
+      <div class="fixed-bottom p-3">
+         <div class="d-grid">
+            <a href="index.html" class="btn btn-danger btn-lg">Submit</a>
          </div>
       </div>
       <!-- sidebar -->
@@ -86,7 +99,7 @@
                   <img src="img/user.jpg" class="img-fluid rounded-pill me-3 ch-50" alt="#">
                   <div class="text-white">
                      <h6 class="mb-0">Hi Your Name</h6>
-                     <small>+91 12345-67890</small><br>
+                     <small>+233 0595553746</small><br>
                      <span class="f-10 text-white-50">Version 1.32</span>
                   </div>
                </a>
@@ -101,10 +114,10 @@
                  
                </ul>
             </li>
-                       <li><a href="coupons.html"><i class="bi bi-ticket-detailed me-2"></i> Coupons</a></li>
+            <li><a href="coupons.html"><i class="bi bi-ticket-detailed me-2"></i> Coupons</a></li>
             <li><a href="offers.html"><i class="bi bi-percent me-2"></i> Offers</a></li>
             <li><a href="wallet.html"><i class="bi bi-wallet me-2"></i> Wallet</a></li>
-                        <li><a href="notifications.html"><i class="bi bi-bell me-2"></i> Notifications</a></li>
+            <li><a href="notifications.html"><i class="bi bi-bell me-2"></i> Notifications</a></li>
             <li><a href="setting.html"><i class="bi bi-gear me-2"></i> Setting</a></li>
             <li><a href="search-list.html"><i class="bi bi-search me-2"></i> Search List</a></li>
             <li><a href="store.html"><i class="bi bi-shop me-2"></i> Store</a></li>
@@ -119,8 +132,6 @@
             <li><a href="order-confirm.html"><i class="bi bi-bag-check me-2"></i> Order Confirm</a></li>
             <li><a href="order-details.html"><i class="bi bi-list-nested me-2"></i> Order Details</a></li>
             <li><a href="support.html"><i class="bi bi-question-circle me-2"></i> Support</a></li>
-            <li><a href="rider.html"><i class="bi bi-truck me-2"></i> Become a Rider</a></li>
-            <li><a href="resturants.html"><i class="bi bi-shop me-2"></i>Add Resturant</a></li>
          </ul>
          <ul class="bottom-nav">
             <li class="email">
@@ -144,16 +155,14 @@
          </ul>
       </nav>
       <!-- Bootstrap core JavaScript -->
-      <script src="vender/jquery/jquery.min.js" type="484f9088ecc1111b2e1f1e48-text/javascript"></script>
-      <script src="vender/bootstrap/js/bootstrap.bundle.min.js" type="484f9088ecc1111b2e1f1e48-text/javascript"></script>
+      <script src="vender/jquery/jquery.min.js" type="a4fc2b989b3a428101cccf46-text/javascript"></script>
+      <script src="vender/bootstrap/js/bootstrap.bundle.min.js" type="a4fc2b989b3a428101cccf46-text/javascript"></script>
       <!-- slick Slider JS-->
-      <script src="vender/slick/slick/slick.min.js" type="484f9088ecc1111b2e1f1e48-text/javascript"></script>
+      <script src="vender/slick/slick/slick.min.js" type="a4fc2b989b3a428101cccf46-text/javascript"></script>
       <!-- Sidebar JS-->
-      <script src="vender/sidebar/hc-offcanvas-nav.js" type="484f9088ecc1111b2e1f1e48-text/javascript"></script>
+      <script src="vender/sidebar/hc-offcanvas-nav.js" type="a4fc2b989b3a428101cccf46-text/javascript"></script>
       <!-- Javascript -->
-      <script src="js/custom.js" type="484f9088ecc1111b2e1f1e48-text/javascript"></script>
-   <script src="../../cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="484f9088ecc1111b2e1f1e48-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9011ebd3fb669586","version":"2024.10.5","r":1,"serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"token":"dd471ab1978346bbb991feaa79e6ce5c","b":1}' crossorigin="anonymous"></script>
+      <script src="js/custom.js" type="a4fc2b989b3a428101cccf46-text/javascript"></script>
+   <script src="../../cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="a4fc2b989b3a428101cccf46-|49" defer></script><script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"rayId":"9011ebcd58169586","version":"2024.10.5","r":1,"serverTiming":{"name":{"cfExtPri":true,"cfL4":true,"cfSpeedBrain":true,"cfCacheStatus":true}},"token":"dd471ab1978346bbb991feaa79e6ce5c","b":1}' crossorigin="anonymous"></script>
 </body>
-
-<!-- Mirrored from askbootstrap.com/preview/eatsome/signup.html by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 13 Jan 2025 03:09:30 GMT -->
 </html>
